--- a/Project_1_Guess_My_Number/index.html
+++ b/Project_1_Guess_My_Number/index.html
@@ -1,34 +1,39 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-    <link href="style.css" rel="stylesheet">
-</head>
-<body>
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body>
     <script src="script.js"></script>
     <section class="top">
-        <button id="restart"><h3>RESTART</h3></button>
-        <h4>Between 1 and 20</h4>
+      <button id="restart"><h3>RESTART</h3></button>
+      <h4>Between 1 and 20</h4>
     </section>
     <section class="center">
-        <h1>GUESS MY NUMBER!</h1>
+      <h1>GUESS MY NUMBER!</h1>
     </section>
     <div class="number">
-        <h4 id="number">?</h4>
+      <h4 id="number">?</h4>
     </div>
-    <div class="input">
+    <div class="input-wrapper1">
+      <div class="start-guessing">Start guessing...</div>
+    </div>
+    <div class="input-wrapper2">
+      <input type="number" id="type" class="input" placeholder="" />
+    </div>
+    <!--<div class="input">
         <input id="type" type="text">
-    </div>
+    </div>-->
     <div class="button-container">
-        <button id="button-check">CHECK</button>
+      <button id="button-check">CHECK</button>
     </div>
-        <h3 class="start-guessing">Start guessing...</h3>
+    <!--<h3 class="start-guessing">Start guessing...</h3>-->
     <section class="totals">
-        <h3 id="score">SCORE: 20</h3>
-        <h3 id="highscore">Highscore: 0</h3>
+      <h3 id="score">SCORE: 20</h3>
+      <h3 id="highscore">Highscore: 0</h3>
     </section>
-
-</body>
+  </body>
 </html>
