pig game html and css layout done along with initgame() and newgame()

--- a/Project_2_Modal_Window/index.html
+++ b/Project_2_Modal_Window/index.html
@@ -12,7 +12,7 @@
     <button class="show-modal">Show modal 2</button>
     <button class="show-modal">Show modal 3</button>
 
-    <div class="modal hidden"> <!-- 'hidden' class has been given a display: none in CSS-->
+    <div class="modal hidden"> <!-- 'hidden' class has been given a display: NONE in CSS-->
         <button class="close-modal">&times;</button>
         <h1>I am a modal window!</h1>
         <p>
