--- a/Project_3_Pig_Game/index.html
+++ b/Project_3_Pig_Game/index.html
@@ -7,33 +7,45 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <div class="instructions">
+      <div id="rules">
+        <p>ROLL THE DICE</p>
+        <p>'1' RESETS YOUR SCORE TO '0'</p>
+        <p>PRESS 'HOLD' TO HOLD CURRENT SCORE</p>
+        <p>FIRST PLAYER TO 30 WINS</p>
+      </div>
+      <div class="click-anywhere">(click anywhere to start)</div>
+    </div>
     <div class="players">
       <div id="player1">
         <div class="player-text">PLAYER 1</div>
         <div class="score1">10</div>
+        <div class="currents">
+          <div class="current-text">CURRENT</div>
+          <div class="current-score1">10</div>
+        </div>
       </div>
       <div id="player2">
         <div class="player-text">PLAYER 2</div>
         <div class="score2">20</div>
+        <div class="currents">
+          <div class="current-text">CURRENT</div>
+          <div class="current-score2">20</div>
+        </div>
       </div>
-      
-    </div>
-
-    
-
-    <!-- <div class="currents">
-        <h3 id="current1">CURRENT</h3>
-        <h3 id="current2">CURRENT</h3>
-    </div>
-    <div class="current_scores">
-        <h3 id="current_score_1"></h3>
-        <h3 id="current_score_2"></h3>
-    </div>
-    <div class="buttons">
+      <div class="buttons">
+        <div class="dice-box"></div>
         <button id="new_game">NEW GAME</button>
         <button id="roll_dice">ROLL DICE</button>
         <button id="hold">HOLD</button>
-    </div> -->
+        <div class="dice-container">
+          <div class="dice">&nbsp</div>
+          <div class="dice">&nbsp.</div>
+          <div class="dice"></div>
+        </div>
+      </div>
+    </div>
+
     <script src="script.js"></script>
   </body>
 </html>
