script(new).js code

--- a/Project_3_Pig_Game/index.html
+++ b/Project_3_Pig_Game/index.html
@@ -19,18 +19,18 @@
     <div class="players">
       <div id="player1">
         <div class="player-text">PLAYER 1</div>
-        <div class="score1">10</div>
+        <div class="score1">0</div>
         <div class="currents">
           <div class="current-text">CURRENT</div>
-          <div class="current-score1">10</div>
+          <div class="current-score1">0</div>
         </div>
       </div>
       <div id="player2">
         <div class="player-text">PLAYER 2</div>
-        <div class="score2">20</div>
+        <div class="score2">0</div>
         <div class="currents">
           <div class="current-text">CURRENT</div>
-          <div class="current-score2">20</div>
+          <div class="current-score2">0</div>
         </div>
       </div>
       <div class="buttons">
@@ -46,6 +46,6 @@
       </div>
     </div>
 
-    <script src="script.js"></script>
+    <script src="script(new).js"></script>
   </body>
 </html>
